infer/tests/codetoanalyze/cpp/errors/types/return_struct.cpp
../../frontend/types/return_struct.cpp